force-app/main/default/objects/Deal_Transaction__c/fields/Processed_DR__c.field-meta.xml
<CustomField>
    <fullName>Processed_DR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed DR</label>
    <type>Checkbox</type>
</CustomField>