force-app/main/default/objects/Deal_Transaction__c/fields/Processed_DS__c.field-meta.xml
<CustomField>
    <fullName>Processed_DS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed DS</label>
    <type>Checkbox</type>
</CustomField>