force-app/main/default/objects/Deal_Transaction__c/fields/Processed_FP__c.field-meta.xml
<CustomField>
    <fullName>Processed_FP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed FP</label>
    <type>Checkbox</type>
</CustomField>