force-app/main/default/objects/Deal_Transaction__c/fields/Processed_FR__c.field-meta.xml
<CustomField>
    <fullName>Processed_FR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed FR</label>
    <type>Checkbox</type>
</CustomField>