force-app/main/default/objects/Deal_Transaction__c/fields/Processed_ML_PCN__c.field-meta.xml
<CustomField>
    <fullName>Processed_ML_PCN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed ML PCN</label>
    <type>Checkbox</type>
</CustomField>