force-app/main/default/objects/Deal_Transaction__c/fields/Processed_PC__c.field-meta.xml
<CustomField>
    <fullName>Processed_PC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed PC</label>
    <type>Checkbox</type>
</CustomField>