force-app/main/default/objects/Deal_Transaction__c/fields/Replacement_Deal_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Deal_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This Deal Transaction may be one of many Deal Transactions associated with an Order. Each time an Order is changed, the Current Deal Transaction is superseded by a Replacement Deal Transaction.</inlineHelpText>
    <label>Replacement Deal Transaction</label>
    <referenceTo>Deal_Transaction__c</referenceTo>
    <relationshipLabel>Deal Transactions</relationshipLabel>
    <relationshipName>Deal_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>