force-app/main/default/objects/Deal_Transaction__c/fields/Settlement_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Settlement Bank Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>c2g__codaBankAccount__c.CurrencyIsoCode</field>
            <operation>equals</operation>
            <valueField>$Source.CurrencyIsoCode</valueField>
        </filterItems>
        <filterItems>
            <field>c2g__codaBankAccount__c.c2g__OwnerCompany__c</field>
            <operation>equals</operation>
            <valueField>$Source.Company__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>c2g__codaBankAccount__c</referenceTo>
    <relationshipLabel>Deal Transactions</relationshipLabel>
    <relationshipName>Deal_Transactions0</relationshipName>
    <type>Lookup</type>
</CustomField>