force-app/main/default/objects/Deal_Transaction__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Superseded</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Cancel with Refund</fullName>
            </value>
            <value>
                <fullName>Cancel with Coupon</fullName>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Billed</fullName>
                <isActive>false</isActive>
                <label>Billed</label>
            </value>
            <value>
                <fullName>Enabled</fullName>
                <isActive>false</isActive>
                <label>Enabled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>