force-app/main/default/objects/Deal_Transaction__c/fields/Status_formula__c.field-meta.xml
<CustomField>
    <fullName>Status_formula__c</fullName>
    <formula>Case(RecordType.Name,

&quot;Sale Transaction&quot;,
if(
   text(Status__c ) = &quot;Superseded&quot;,
   &quot;Superseded&quot;,
     if(
        text(TAD_Order__r.ordexp_master_status__c) = &quot;Cancelled&quot;,
        &quot;Cancelled&quot;,
        &quot;Active&quot;
     )
),

&quot;Coupon Transaction&quot;,
if(
   text(Coupon__r.Status__c) = &quot;Enabled&quot;,
   &quot;Enabled&quot;,
   &quot;Disabled&quot;
),

&quot;Active&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>