force-app/main/default/objects/Deal_Transaction__c/fields/TAD_Booking_Records__c.field-meta.xml
<CustomField>
    <fullName>TAD_Booking_Records__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TAD Booking Records</label>
    <referenceTo>TAD_Booking_Records__c</referenceTo>
    <relationshipLabel>Deal Transactions</relationshipLabel>
    <relationshipName>Deal_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>