force-app/main/default/objects/Deal_Transaction__c/fields/Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount__c</fullName>
    <inlineHelpText>The Tax Amount the portion of the Amount which is tax. The Amount is made up of Taxable Amount + Tax Amount + Tax Free Amount. This amount is calculated and passed to FFA because it is usually reportable in GST / VAT returns.</inlineHelpText>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>