force-app/main/default/objects/Deal_Transaction__c/fields/Tax_Amount_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount_Rollup__c</fullName>
    <inlineHelpText>The amount of tax entered on the Deal Transaction Lines</inlineHelpText>
    <label>Tax Amount Rollup</label>
    <summarizedField>Deal_Transaction_Line__c.Tax_Amount__c</summarizedField>
    <summaryForeignKey>Deal_Transaction_Line__c.Deal_Transaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>