force-app/main/default/objects/Deal_Transaction__c/fields/Tax_Free__c.field-meta.xml
<CustomField>
    <fullName>Tax_Free__c</fullName>
    <formula>or( Tax_Free_Amount__c = 0, (isblank(Tax_Free_Amount__c)) )
/*and( Tax_Free_Amount__c &lt;&gt; 0, not(isblank(Tax_Free_Amount__c)) )*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Free</label>
    <type>Checkbox</type>
</CustomField>