force-app/main/default/objects/Deal_Transaction__c/fields/Tax_Free_Amount_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Tax_Free_Amount_Rollup__c</fullName>
    <label>Tax Free Amount Rollup</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>