force-app/main/default/objects/Deal_Transaction__c/fields/Tax_Free_Inputs_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax_Free_Inputs_Tax_Code__c</fullName>
    <formula>Company__r.Default_Non_Taxable_Inputs__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax-Free Inputs Tax Code</label>
    <type>Text</type>
</CustomField>