force-app/main/default/objects/Deal_Transaction__c/fields/Tax_Invoice_Sent__c.field-meta.xml
<CustomField>
    <fullName>Tax_Invoice_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Invoice Sent</label>
    <type>Checkbox</type>
</CustomField>