force-app/main/default/objects/Deal_Transaction__c/fields/Taxable__c.field-meta.xml
<CustomField>
    <fullName>Taxable__c</fullName>
    <formula>Tax_Amount_Rollup__c + Tax_Amount__c &lt;&gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taxable</label>
    <type>Checkbox</type>
</CustomField>