force-app/main/default/objects/Deal_Transaction__c/fields/Taxable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Amount__c</fullName>
    <formula>Taxable_Amount_Rollup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Taxable Amount the portion of the Amount which is subject to tax. The Amount is made up of Taxable Amount + Tax Amount + Tax Free Amount. This amount is calculated and passed to FFA because it is usually reportable in GST / VAT returns.</inlineHelpText>
    <label>Taxable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>