force-app/main/default/objects/Deal_Transaction__c/fields/Taxable_Outputs_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Outputs_Tax_Code__c</fullName>
    <formula>Company__r.Default_Taxable_Outputs__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taxable Outputs Tax Code</label>
    <type>Text</type>
</CustomField>