force-app/main/default/objects/Deal_Transaction__c/fields/Transaction_Rate__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Rate__c</fullName>
    <label>Transaction Rate</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>