force-app/main/default/objects/Deal_Transaction__c/fields/Variance_Journal__c.field-meta.xml
<CustomField>
    <fullName>Variance_Journal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variance Journal</label>
    <referenceTo>c2g__codaJournal__c</referenceTo>
    <relationshipLabel>Deal Transactions (Variance Journal)</relationshipLabel>
    <relationshipName>Deal_Transactions2</relationshipName>
    <type>Lookup</type>
</CustomField>