force-app/main/default/objects/Deal_Transaction__c/fields/Wholesale__c.field-meta.xml
<CustomField>
    <fullName>Wholesale__c</fullName>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wholesale</label>
    <type>Checkbox</type>
</CustomField>