force-app/main/default/objects/Deal_Transaction__c/recordTypes/Coupon_Transaction.recordType-meta.xml
<RecordType>
    <fullName>Coupon_Transaction</fullName>
    <active>true</active>
    <description>Use this Record Type to record the issue of Coupons and payment with Coupons</description>
    <label>Coupon Transaction</label>
</RecordType>