force-app/main/default/objects/Deal_Transaction__c/recordTypes/Multi_Line_Expense.recordType-meta.xml
<RecordType>
    <fullName>Multi_Line_Expense</fullName>
    <active>true</active>
    <description>Use this Record Type to capture vendor invoices need multiple lines - e,g, PNR invoice</description>
    <label>Multi-Line Expense</label>
</RecordType>