force-app/main/default/objects/Deal_Transaction__c/recordTypes/Payment_Transaction.recordType-meta.xml
<RecordType>
    <fullName>Payment_Transaction</fullName>
    <active>true</active>
    <description>Use this Record Type to record Payments from travellers</description>
    <label>Payment Transaction</label>
</RecordType>