force-app/main/default/objects/Deal_Transaction__c/recordTypes/Sale_Transaction.recordType-meta.xml
<RecordType>
    <fullName>Sale_Transaction</fullName>
    <active>true</active>
    <description>Use this record type to capture the sale of Deals (Orders)</description>
    <label>Sale Transaction</label>
</RecordType>