force-app/main/default/objects/Deal_Transaction__c/recordTypes/Single_Line_Expense.recordType-meta.xml
<RecordType>
    <fullName>Single_Line_Expense</fullName>
    <active>true</active>
    <description>Use this Record Type to capture vendor invoices that need single line - i.e. not a PNR invoice</description>
    <label>Single-Line Expense</label>
</RecordType>