force-app/main/default/objects/Deal_Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tax_Rate__c</columns>
    <columns>Amount_Rollup__c</columns>
    <columns>Tax_Free_Amount__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Account__c</columns>
    <columns>ff_Proxy__c</columns>
    <columns>Is_Escape_Deal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>