force-app/main/default/objects/Deal_Transaction__c/listViews/CC0_Deal_Transaction_to_Journal.listView-meta.xml
<ListView>
    <fullName>CC0_Deal_Transaction_to_Journal</fullName>
    <columns>NAME</columns>
    <columns>Process_CC__c</columns>
    <columns>Processed_CC__c</columns>
    <columns>Tax_Rate__c</columns>
    <columns>Amount_Rollup__c</columns>
    <columns>Tax_Free_Amount__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Account__c</columns>
    <columns>ff_Proxy__c</columns>
    <columns>Is_Escape_Deal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Process_CC__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Processed_CC__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>CC0 Deal Transaction to Journal</label>
    <sharedTo>
        <group>IT_Team</group>
    </sharedTo>
</ListView>