force-app/main/default/objects/Deal_Transaction__c/listViews/MLE.listView-meta.xml
<ListView>
    <fullName>MLE</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Account__c</columns>
    <columns>Departure_Date__c</columns>
    <columns>Component__c</columns>
    <columns>ff_Proxy__c</columns>
    <columns>Is_Escape_Deal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Deal_Transaction__c.Multi_Line_Expense</value>
    </filters>
    <label>MLE</label>
</ListView>